data/derived/comb/progs/unify/prog0585.ml.out
Characters 8-10:
  let _ = pi ^ 2;;
          ^^
Error: This expression has type float but an expression was expected of type
         string
